app-deployment/base/deployment-blue.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blue-app
  labels:
    app: blue-app
    app.kubernetes.io/component: blue-app
    app.kubernetes.io/instance: blue-app
    app.kubernetes.io/name: blue-app
    app.kubernetes.io/part-of: blue-green-app
    app.openshift.io/runtime-icon: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: green-app
          image: 'quay.io/devnations-ceaca/blue-green:720b3f22-61f9-47cc-884b-758cb21e8870'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
