app-deployment/base/service-blue.yaml
kind: Service
apiVersion: v1
metadata:
  name: blue-service
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: blue-app
