app-deployment/base/service-green.yaml
kind: Service
apiVersion: v1
metadata:
  name: green-service
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: green-app
