app-deployment/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: green-app
