app-deployment/base/route-weighted.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bg-weighted
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: blue-service
    weight: 50
  alternateBackends:
    - kind: Service
      name: green-service
      weight: 50
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
